objects/Currency__c.object
<CustomObject>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c_Currency_code__c</fullName>
        <label>c.	Currency code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_Effective_date__c</fullName>
        <label>d.	Effective date</label>
        <type>Date</type>
    </fields>
    <label>Currency</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>